@@ -53,6 +53,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Speedup bin/docs-update-generated by caching parsed docbook schema. (60x speedup)
     - Reorganized source tree. Moved src/engine/SCons to SCons to be more in line with current Python source
       tree organization practices.
+    - Renamed as.py to asm.py and left redirecting tool.  'as' is a reserved word and so
+      changing the name was required as we wanted to import symbols for use in compilation_db
+      tool.
 
   From Jeremy Elson:
     - Updated design doc to use the correct syntax for Depends()
